--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "paypal/rest-api-sdk-php": "^1.14"
+        "midnite81/geolocation": "^1.0",
+        "paypal/rest-api-sdk-php": "^1.14",
+        "spatie/geocoder": "^3.4"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
